--- a/wx_h5_front/package.json
+++ b/wx_h5_front/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-axios": "^2.1.4",
+    "vue-cookie": "^1.1.4",
+    "vue-router": "^3.0.2",
+    "weixin-js-sdk": "^1.3.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
