--- a/wx_h5_server/package.json
+++ b/wx_h5_server/package.json
@@ -1,7 +1,20 @@
 {
+  "name": "wx_h5_server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
+  "scripts": {
+    "nodemon": "nodemon app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
+    "@koa/cors": "^3.1.0",
+    "axios": "^0.21.1",
     "koa": "^2.13.1",
     "koa-body": "^4.2.0",
-    "mongoose": "^5.13.2"
+    "koa-router": "^10.0.0"
   }
 }
